[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyciteck"
version = "0.1.5"
description = "Citeck Community Edition client for python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/gulyaeve/PyCiteck"